--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe id="pdf-viewer" src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/Hasibul006/resume/main/Hasib.pdf" width="100%" height="1200px"></iframe></body>
+    <iframe id="pdf-viewer" src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/MahirAbrar3425/cv/main/technical lab pdf.pdf" width="100%" height="1200px"></iframe></body>
 
 </body>
 </html>
